# libas

./: .gitmodules  CMakeLists.txt  README.md  SharemindLibAsConfig.cmake.in  SharemindLibAsConfigVersion.cmake.in  SharemindLibasConfig.cmake.in  SharemindLibasConfigVersion.cmake.in  config.local.example
doc/: assembly.md
src/: Exception.cpp  Exception.h  as.c  assemble.c  assemble.cpp  assemble.h  linker.c  linker.cpp  linker.h  linkingunits.c  linkingunits.cpp  linkingunits.h  stdion.c  stdion.h  tokenizer.c  tokenizer.cpp  tokenizer.h  tokens.c  tokens.cpp  tokens.h
src/libsma/: assemble.c  assemble.h  libsma.pro  linker.c  linker.h  linkingunits.c  linkingunits.h  stdion.c  stdion.h  tokenizer.c  tokenizer.h  tokens.c  tokens.h
src/libsmas/: assemble.c  assemble.h  libsmas.pro  linker.c  linker.h  linkingunits.c  linkingunits.h  stdion.c  stdion.h  tokenizer.c  tokenizer.h  tokens.c  tokens.h
src/sharemind/: CMakeLists.txt
src/sharemind/libas/: assemble.c  assemble.h  linker.c  linker.h  linkingunits.c  linkingunits.h  stdion.h  tokenizer.c  tokens.h
src/sharemind/libsmas/: assemble.c  assemble.h  linker.c  linkingunits.c  linkingunits.h  tokenizer.c  tokenizer.h  tokens.c  tokens.h
src/sharemind/smas/: main.c
src/sma/: assemble.c  assemble.h  main.c  sma.pro  stdion.c  stdion.h  tokenizer.c  tokenizer.h  tokens.c  tokens.h
src/smas/: main.c  smas.pro
